start 2.1 gpg-agent correctly
GnuPG 2.1 made changes to gpg-agent, and consequently the method to
start it has changed. Instead of using `gpg-connect-agent /bye`, use
`gpgconf --launch gpg-agent` as suggested by the GnuPG 2.1 release
notes.

Modify gpg-agent.conf to always enable ssh support.

--- a/roles/developer/templates/gpg-agent.conf.j2
+++ b/roles/developer/templates/gpg-agent.conf.j2
@@ -1,6 +1,9 @@
 # Enables GPG to find gpg-agent
 use-standard-socket
 
+# Allow gpg-agent to manage SSH keys; needed for Authenticating SSH with gpg keys
+enable-ssh-support
+
 {% if ansible_distribution == "MacOSX" %}
 # Use pinentry-mac as the PIN entry.
 pinentry-program /usr/local/bin/pinentry-mac
