--- a/roles/gpg-user/templates/gpg.conf.j2
+++ b/roles/gpg-user/templates/gpg.conf.j2
@@ -47,10 +47,6 @@ use-agent
 # communicate with to receive keys from, send keys to, and search for keys on
 keyserver hkps://hkps.pool.sks-keyservers.net
 
-# Provide a certificate store to override the system default
-# Get this from https://sks-keyservers.net/sks-keyservers.netCA.pem
-keyserver-options ca-cert-file={{ ansible_env.HOME }}/.gnupg/sks-keyservers.netCA.pem
-
 # Set the proxy to use for HTTP and HKP keyservers - default to the standard
 # local Tor socks proxy
 # It is encouraged to use Tor for improved anonymity. Preferrably use either a
@@ -59,7 +55,7 @@ keyserver-options ca-cert-file={{ ansible_env.HOME }}/.gnupg/sks-keyservers.netC
 #keyserver-options http-proxy=socks5-hostname://127.0.0.1:9050
 
 # Don't leak DNS, see https://trac.torproject.org/projects/tor/ticket/2846
-keyserver-options no-try-dns-srv
+#keyserver-options no-try-dns-srv
 
 # When using --refresh-keys, if the key in question has a preferred keyserver
 # URL, then disable use of that preferred keyserver to refresh the key from
