split rtl_fm and direwolf into separate services
Split rtl_fm and direwolf into separate services and stop using a shell
script to try to control the igate pipeline.

rtl_fm now runs in the aprs service with its stdout hooked up to a named
pipe and direwolf runs in the igate service with its stdin hookup to the
other end of the named pipe.

--- a/roles/aprs-igate/templates/sdr-igate.conf.tmpl
+++ b/roles/aprs-igate/templates/sdr-igate.conf.tmpl
@@ -4,7 +4,7 @@
 
 # We might not have an audio output device so set to null.
 # We will override the input half on the command line.
-ADEVICE stdin null
+ADEVICE null null
 CHANNEL 0
 MYCALL {{ sdr_igate.call }}
 
