--- a/roles/aprs-igate/templates/igate.conf.tmpl
+++ b/roles/aprs-igate/templates/igate.conf.tmpl
@@ -1,11 +1,11 @@
-#
+
 # configuration for IGate.
 #
 
 ADEVICE {{ igate.input_device | default('null') }} {{ igate.output_device | default('null') }}
 PTT /dev/ttyUSB0 RTS DTR
 CHANNEL 0
-MYCALL {{ igate.call }}
+MYCALL {{ igate.call }}-{{ igate.ssid }}
 
 # First you need to specify the name of a Tier 2 server.
 # The current preferred way is to use one of these regional rotate addresses:
@@ -18,8 +18,7 @@ MYCALL {{ igate.call }}
 
 IGSERVER {{ igate.tier2_server | default('noam.aprs2.net') }}
 IGLOGIN {{ igate.login }} {{ igate.passcode }}
-
-IGTXVIA 0 {{ igate.via | default('WIDE1-1') }}
+IGTXVIA 0 {{ igate.igtxvia | default('WIDE1-1') }}
 
 # disable AGW
 AGWPORT 0
@@ -27,11 +26,11 @@ AGWPORT 0
 KISSPORT 0
 
 # beacon via radio
-PBEACON delay=1 every=30 symbol="igate" overlay=T lat={{ igate.lat }} long={{ igate.long }} power=5 height=20 comment="igate on Raspberry Pi with Yaesu FT-2980" via=WIDE1-1,WIDE2-1
+PBEACON delay=1 every=30 symbol="igate" overlay=T lat={{ igate.lat_decimal }} long={{ igate.long_decimal }} power=5 height=20 comment="igate on Raspberry Pi with Yaesu FT-2980" via=WIDE1-1,WIDE2-1
 
 # beacon APRS-IS directly
 # TODO(bc): update comment?
-PBEACON sendto=IG delay=1 every=30 symbol="igate" overlay=T lat={{ igate.lat }} long={{ igate.long }} power=5 height=20 comment="igate on Raspbery Pi with Yaesu FT-2980"
+PBEACON sendto=IG delay=1 every=30 symbol="igate" overlay=T lat={{ igate.lat_decimal }} long={{ igate.long_decimal }} power=5 height=20 comment="igate on Raspbery Pi with Yaesu FT-2980"
 
 # beacon IGATE stats to APRS-IS directly
 IBEACON sendto=IG delay=1 every=30
