--- a/roles/aprs-igate/templates/sdr-igate.conf.tmpl
+++ b/roles/aprs-igate/templates/sdr-igate.conf.tmpl
@@ -6,7 +6,7 @@
 # We will override the input half on the command line.
 ADEVICE null null
 CHANNEL 0
-MYCALL {{ igate.call }}
+MYCALL {{ igate.call }}-{{ igate.ssid }}
 
 # First you need to specify the name of a Tier 2 server.
 # The current preferred way is to use one of these regional rotate addresses:
@@ -29,4 +29,4 @@ KISSPORT 0
 # messages from the local radio channel to the global servers.
 
 # beacon APRS-IS directly
-PBEACON sendto=IG delay=1 every=30 overlay=R symbol="igate" lat={{ igate.lat }} long={{ igate.long }} height=20 comment="receive only igate"
+PBEACON sendto=IG delay=1 every=30 overlay=R symbol="igate" lat={{ igate.lat_decimal }} long={{ igate.long_decimal }} height=20 comment="receive only igate"
