--- a/roles/aprs-igate/templates/fluent/igate-output.conf.tmpl
+++ b/roles/aprs-igate/templates/fluent/igate-output.conf.tmpl
@@ -9,3 +9,19 @@
   compress    gzip
   tls         On
   tls.verify  On
+
+[OUTPUT]
+  name influxdb
+  #match_regex  direwolf\.(((timestamp\.)?pos)|(stats))
+  match direwolf.stats
+  host localhost
+  port 8186
+  bucket {{ metrics.bucket }}
+  org {{ metrics.org }}
+  http_token {{ metrics.token }}
+  tag_keys station deviceid
+
+[OUTPUT]
+  name NULL
+  #match_regex  direwolf\.(((timestamp\.)?pos)|(stats))
+  match direwolf.*
