aprs-igate: drop the aprs packets metric correctly

--- a/roles/aprs-igate/templates/telegraf/direwolf.conf.tmpl
+++ b/roles/aprs-igate/templates/telegraf/direwolf.conf.tmpl
@@ -46,7 +46,7 @@ token = "${INFLUX_TOKEN}"
   organization = "{{ metrics.org }}"
   bucket = "{{ metrics.bucket }}"
   token = "${INFLUX_TOKEN}"
-  namedrop = ["aprs_positions","cpu","disk","diskio","kernel","mem","processes","swap","system"]
+  namedrop = ["aprs_packets","cpu","disk","diskio","kernel","mem","processes","swap","system"]
   #ping_timeout = "15s"
   #read_idle_timeout = "30s"
 #   ## The URLs of the InfluxDB cluster nodes.
