--- a/roles/aprs-igate/templates/igate.conf.tmpl
+++ b/roles/aprs-igate/templates/igate.conf.tmpl
@@ -27,11 +27,13 @@ AGWPORT 0
 KISSPORT 0
 
 # beacon via radio
-PBEACON delay=1 every=30 symbol="igate" overlay=T lat={{ igate.lat_decimal }} long={{ igate.long_decimal }} power=5 height=20 comment="igate on Raspberry Pi with Yaesu FT-2980" via=WIDE1-1,WIDE2-1
+PBEACON delay=1 every=30 symbol="igate" overlay=T lat={{ igate.lat_decimal }} long={{ igate.long_decimal }} power=30 height=20 comment="igate on Raspberry Pi with Yaesu FT-2980" via=WIDE1-1,WIDE2-1
+CBEACON sendto=0  delay=60:00 every=60 info=">console/map/stats/logs @ {{ igate.dashboard_url }}" via={{ igate.via | default('WIDE1-1') }}
 
 # beacon APRS-IS directly
 # TODO(bc): update comment?
-PBEACON sendto=IG delay=1 every=30 symbol="igate" overlay=T lat={{ igate.lat_decimal }} long={{ igate.long_decimal }} power=5 height=20 comment="igate on Raspbery Pi with Yaesu FT-2980"
+PBEACON sendto=IG delay=1 every=30 symbol="igate" overlay=T lat={{ igate.lat_decimal }} long={{ igate.long_decimal }} power=30 height=20 comment="igate on Raspbery Pi with Yaesu FT-2980"
+#CBEACON sendto=IG delay=00:60 every=60 info=">console/map/stats/logs @ {{ igate.dashboard_url }}
 
 # beacon IGATE stats to APRS-IS directly
 IBEACON sendto=IG delay=1 every=30
