--- a/roles/aprs-igate/templates/sdr-igate.conf.tmpl
+++ b/roles/aprs-igate/templates/sdr-igate.conf.tmpl
@@ -7,6 +7,7 @@
 ADEVICE null null
 CHANNEL 0
 MYCALL {{ igate.call }}-{{ igate.ssid }}
+LOGFILE /var/log/direwolf/direwolf.log
 
 # First you need to specify the name of a Tier 2 server.
 # The current preferred way is to use one of these regional rotate addresses:
